Fixed alignment issue with ratings in modal dialog.  Closes #4

--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -13,6 +13,10 @@
   text-align: center;
 }
 
+.modal-body .control-label {
+  padding-top:3px;
+}
+
 .star-rating,
 .star-rating a:hover,
 .star-rating a:active,
